--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -22,7 +22,6 @@
       justify-content: space-between;
       width: 850px;
       margin: 0 auto;
-      position: relative;
 
       .navBox {
         width: 33.3%;
@@ -61,6 +60,7 @@
           border: 1px solid lightgray;
           border-radius: 10px;
           background-color: #efefef;
+          position: relative;
         }
 
         input::placeholder {
@@ -74,15 +74,16 @@
       }
 
       #searchIdWeapper {
-        position: relative;
-        left: -80px;
-        top: 10px;
+        width: 370px;
+        position: absolute;
+        left: calc(50vw - 185px);
+        top: 75px;
 
         #searchId {
-          width: 450px;
           max-height: 400px;
-          border: 3px solid darkgray;
-          border-radius: 5px;
+          min-height: 60px;
+          border: 1px solid darkgray;
+          border-radius: 8px;
           background-color: white;
           overflow-y: scroll;
 
@@ -125,15 +126,15 @@
         }
       }
 
-      #searchIdWeapper.boxShow {
+      #searchIdWeapper.boxHidden {
         display: none;
       }
 
-      #searchId::after {
+      #middleNav::after {
         content: '';
         position: absolute;
-        top: 0;
-        left: 80%;
+        top: 75px;
+        left: 50%;
         width: 0;
         height: 0;
         border: 13px solid transparent;
@@ -257,6 +258,7 @@
           p:nth-child(1) img {
             border-radius: 50%;
             width: 40px;
+            height: 40px;
             margin: 0 10px;
           }
         }
@@ -289,6 +291,12 @@
               position: relative;
               right: 10px;
             }
+
+            .heartBtn {
+              background-color: transparent;
+              border: none;
+              cursor: pointer;
+            }
           }
 
           .likeMessage {
@@ -299,6 +307,7 @@
             img {
               border-radius: 50%;
               width: 20px;
+              height: 20px;
               margin-right: 10px;
             }
           }
@@ -399,8 +408,9 @@
 
             img {
               width: 40px;
+              height: 40px;
               border-radius: 50%;
-              margin: 0 5px;
+              margin: 0 10px;
             }
           }
 
