--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 #mainContainer {
   nav {
     z-index: 1;
@@ -123,17 +119,19 @@
               }
             }
           }
+
+          .noSearch {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
         }
       }
 
-      #searchIdWeapper.boxHidden {
-        display: none;
-      }
-
-      #middleNav::after {
+      #searchIdWeapper::after {
         content: '';
         position: absolute;
-        top: 75px;
+        top: 0px;
         left: 50%;
         width: 0;
         height: 0;
@@ -144,12 +142,16 @@
         margin-top: -13px;
       }
 
+      #searchIdWeapper.boxHidden {
+        display: none;
+      }
+
       /* 오른쪽 nav */
       #rightNav {
         display: flex;
         padding-left: 20%;
 
-        p {
+        .rightNavImgWrapper {
           width: 100px;
           display: flex;
           justify-content: center;
@@ -166,36 +168,40 @@
             margin: 0 13px;
           }
         }
-      }
 
-      /* 메뉴박스 */
-      #menuBox {
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        border-radius: 10px;
-        background-color: whitesmoke;
-        width: 200px;
-        height: 250px;
-        position: absolute;
-        top: 40px;
-        right: -40px;
-        z-index: 2;
+        .profileLi {
+          position: relative;
 
-        button {
-          display: block;
-          width: 100%;
-          height: 20%;
-          border-radius: 10px;
-          border: none;
-          background-color: inherit;
-          text-align: left;
-          padding-left: 20px;
-          cursor: pointer;
-        }
+          /* 메뉴박스 */
+          #menuBox {
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            border-radius: 10px;
+            background-color: whitesmoke;
+            width: 200px;
+            height: 250px;
+            position: absolute;
+            top: 35px;
+            right: 20px;
+            z-index: 2;
 
-        button:last-child {
-          border-top-left-radius: 0px;
-          border-top-right-radius: 0px;
-          border-top: 1px solid gray;
+            button {
+              display: block;
+              width: 100%;
+              height: 20%;
+              border-radius: 10px;
+              border: none;
+              background-color: inherit;
+              text-align: left;
+              padding-left: 20px;
+              cursor: pointer;
+            }
+
+            button:last-child {
+              border-top-left-radius: 0px;
+              border-top-right-radius: 0px;
+              border-top: 1px solid gray;
+            }
+          }
         }
       }
 
