--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -153,7 +153,7 @@
       /* 오른쪽 nav */
       #rightNav {
         display: flex;
-        padding-left: 30%;
+        padding-left: 40%;
         // background-color: rgb(151, 177, 127);
 
         .rightNavImgWrapper {
@@ -521,6 +521,10 @@
 
     nav {
       min-width: 700px;
+    }
+
+    .MainLogo {
+      display: none;
     }
   }
 }
