--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -3,6 +3,7 @@
     z-index: 1;
     position: fixed;
     width: 100%;
+
     height: 90px;
     padding: 30px 0;
     background: linear-gradient(
@@ -14,9 +15,10 @@
     border-bottom: 1px solid lightgray;
 
     #navBoxs {
+      width: 890px;
+      margin: 0 auto;
       display: grid;
       grid-template-columns: 33.333% 33.333% 33.333%;
-      padding: 0 10%;
 
       .navBox {
         height: 32px;
@@ -46,7 +48,7 @@
           font-size: 28px;
         }
 
-        @media screen and (max-width: 530px) {
+        @media screen and (max-width: 560px) {
           .MainWestagram {
             font-size: 1.5rem;
           }
@@ -76,12 +78,6 @@
 
         input:focus {
           outline: none;
-        }
-      }
-
-      @media screen and (max-width: 530px) {
-        .MainWestagram {
-          font-size: 1.5rem;
         }
       }
 
@@ -228,6 +224,26 @@
 
       .show {
         display: block;
+      }
+    }
+
+    @media screen and (max-width: 950px) {
+      #navBoxs {
+        width: 550px;
+
+        .navBox {
+          //
+        }
+      }
+    }
+
+    @media screen and (max-width: 560px) {
+      #navBoxs {
+        width: 450px;
+
+        #rightNav {
+          padding-left: 30%;
+        }
       }
     }
   }
@@ -525,3 +541,16 @@
     }
   }
 }
+
+// #navBoxs {
+//   width: 890px;
+//   margin: 0 auto;
+//   display: grid;
+//   grid-template-columns: 33.333% 33.333% 33.333%;
+
+//   .navBox {
+//     height: 32px;
+//     width: 100%;
+//     // min-width: 193px;
+//     // border: 1px solid red;
+//   }
